// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structs/kernel serializes and prints CombinedAccumulatedData 1`] = `
"aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0xc01
old_value: 0xc02
new_value: 0xc03
 leaf_index: 0xc02
old_value: 0xc03
new_value: 0xc04
 leaf_index: 0xc03
old_value: 0xc04
new_value: 0xc05
 leaf_index: 0xc04
old_value: 0xc05
new_value: 0xc06
 ]
public_data_reads:
[ leaf_index: 0xd01
value: 0xd02
 leaf_index: 0xd02
value: 0xd03
 leaf_index: 0xd03
value: 0xd04
 leaf_index: 0xd04
value: 0xd05
 ]
"
`;

exports[`structs/kernel serializes and prints EcdsaSignature 1`] = `"{ 0101010101010101010101010101010101010101010101010101010101010101, 0101010101010101010101010101010101010101010101010101010101010101 }"`;

exports[`structs/kernel serializes and prints previous_kernel_data 1`] = `
"public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0xc01
old_value: 0xc02
new_value: 0xc03
 leaf_index: 0xc02
old_value: 0xc03
new_value: 0xc04
 leaf_index: 0xc03
old_value: 0xc04
new_value: 0xc05
 leaf_index: 0xc04
old_value: 0xc05
new_value: 0xc06
 ]
public_data_reads:
[ leaf_index: 0xd01
value: 0xd02
 leaf_index: 0xd02
value: 0xd03
 leaf_index: 0xd03
value: 0xd04
 leaf_index: 0xd04
value: 0xd05
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
deployer_public_key: x: coordinate: [ 0x105 0x0 ]

y: coordinate: [ 0x106 0x0 ]


constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]
"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_init 1`] = `
"tx_request:
from: 0x1
function_data: function_selector: 257
is_private: 1
is_constructor: 1

args_hash: 0x201
tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
deployer_public_key: x: coordinate: [ 0x401 0x0 ]

y: coordinate: [ 0x402 0x0 ]


constructor_vk_hash: 0x402
function_tree_root: 0x403
contract_address_salt: 0x404
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x0
version: 0x0


private_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x1213 0x1214 ]
read_requests: [ 0x1311 0x1312 0x1313 0x1314 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
encrypted_logs_hash: [ 0x1911 0x1912 ]
unencrypted_logs_hash: [ 0x1a11 0x1a12 ]
encrypted_log_preimages_length: 0x1b11
unencrypted_log_preimages_length: 0x1c11
historic_private_data_tree_root: 0x1e11
historic_nullifier_tree_root: 0x1f11
historic_contract_tree_root: 0x1d11
historic_l1_to_l2_messages_tree_root: 0x2011
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2111
version: 0x2211

is_execution_request: 0

private_call_stack_preimages:
[ contract_address: 0x1011
function_data: function_selector: 1012
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1221 0x1222 0x1223 0x1224 ]
read_requests: [ 0x1321 0x1322 0x1323 0x1324 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
encrypted_logs_hash: [ 0x1921 0x1922 ]
unencrypted_logs_hash: [ 0x1a21 0x1a22 ]
encrypted_log_preimages_length: 0x1b21
unencrypted_log_preimages_length: 0x1c21
historic_private_data_tree_root: 0x1e21
historic_nullifier_tree_root: 0x1f21
historic_contract_tree_root: 0x1d21
historic_l1_to_l2_messages_tree_root: 0x2021
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2121
version: 0x2221

is_execution_request: 0
 contract_address: 0x1012
function_data: function_selector: 1013
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1222 0x1223 0x1224 0x1225 ]
read_requests: [ 0x1322 0x1323 0x1324 0x1325 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
encrypted_logs_hash: [ 0x1922 0x1923 ]
unencrypted_logs_hash: [ 0x1a22 0x1a23 ]
encrypted_log_preimages_length: 0x1b22
unencrypted_log_preimages_length: 0x1c22
historic_private_data_tree_root: 0x1e22
historic_nullifier_tree_root: 0x1f22
historic_contract_tree_root: 0x1d22
historic_l1_to_l2_messages_tree_root: 0x2022
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2122
version: 0x2222

is_execution_request: 0
 contract_address: 0x1013
function_data: function_selector: 1014
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1223 0x1224 0x1225 0x1226 ]
read_requests: [ 0x1323 0x1324 0x1325 0x1326 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
encrypted_logs_hash: [ 0x1923 0x1924 ]
unencrypted_logs_hash: [ 0x1a23 0x1a24 ]
encrypted_log_preimages_length: 0x1b23
unencrypted_log_preimages_length: 0x1c23
historic_private_data_tree_root: 0x1e23
historic_nullifier_tree_root: 0x1f23
historic_contract_tree_root: 0x1d23
historic_l1_to_l2_messages_tree_root: 0x2023
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2123
version: 0x2223

is_execution_request: 0
 contract_address: 0x1014
function_data: function_selector: 1015
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1224 0x1225 0x1226 0x1227 ]
read_requests: [ 0x1324 0x1325 0x1326 0x1327 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
encrypted_logs_hash: [ 0x1924 0x1925 ]
unencrypted_logs_hash: [ 0x1a24 0x1a25 ]
encrypted_log_preimages_length: 0x1b24
unencrypted_log_preimages_length: 0x1c24
historic_private_data_tree_root: 0x1e24
historic_nullifier_tree_root: 0x1f24
historic_contract_tree_root: 0x1d24
historic_l1_to_l2_messages_tree_root: 0x2024
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2124
version: 0x2224

is_execution_request: 0
 ]
proof:
[ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk:
key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness:
leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness:
leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 ]

read_request_membership_witnesses:
[ leaf_index: 0x1071
sibling_path: [ 0x1071 0x1072 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 ]
 leaf_index: 0x1072
sibling_path: [ 0x1072 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 ]
 leaf_index: 0x1073
sibling_path: [ 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 ]
 leaf_index: 0x1074
sibling_path: [ 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 ]
 ]
portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_inner 1`] = `
"previous_kernel:
public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0xc01
old_value: 0xc02
new_value: 0xc03
 leaf_index: 0xc02
old_value: 0xc03
new_value: 0xc04
 leaf_index: 0xc03
old_value: 0xc04
new_value: 0xc05
 leaf_index: 0xc04
old_value: 0xc05
new_value: 0xc06
 ]
public_data_reads:
[ leaf_index: 0xd01
value: 0xd02
 leaf_index: 0xd02
value: 0xd03
 leaf_index: 0xd03
value: 0xd04
 leaf_index: 0xd04
value: 0xd05
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
deployer_public_key: x: coordinate: [ 0x105 0x0 ]

y: coordinate: [ 0x106 0x0 ]


constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

private_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x1213 0x1214 ]
read_requests: [ 0x1311 0x1312 0x1313 0x1314 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
encrypted_logs_hash: [ 0x1911 0x1912 ]
unencrypted_logs_hash: [ 0x1a11 0x1a12 ]
encrypted_log_preimages_length: 0x1b11
unencrypted_log_preimages_length: 0x1c11
historic_private_data_tree_root: 0x1e11
historic_nullifier_tree_root: 0x1f11
historic_contract_tree_root: 0x1d11
historic_l1_to_l2_messages_tree_root: 0x2011
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2111
version: 0x2211

is_execution_request: 0

private_call_stack_preimages:
[ contract_address: 0x1011
function_data: function_selector: 1012
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1221 0x1222 0x1223 0x1224 ]
read_requests: [ 0x1321 0x1322 0x1323 0x1324 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
encrypted_logs_hash: [ 0x1921 0x1922 ]
unencrypted_logs_hash: [ 0x1a21 0x1a22 ]
encrypted_log_preimages_length: 0x1b21
unencrypted_log_preimages_length: 0x1c21
historic_private_data_tree_root: 0x1e21
historic_nullifier_tree_root: 0x1f21
historic_contract_tree_root: 0x1d21
historic_l1_to_l2_messages_tree_root: 0x2021
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2121
version: 0x2221

is_execution_request: 0
 contract_address: 0x1012
function_data: function_selector: 1013
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1222 0x1223 0x1224 0x1225 ]
read_requests: [ 0x1322 0x1323 0x1324 0x1325 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
encrypted_logs_hash: [ 0x1922 0x1923 ]
unencrypted_logs_hash: [ 0x1a22 0x1a23 ]
encrypted_log_preimages_length: 0x1b22
unencrypted_log_preimages_length: 0x1c22
historic_private_data_tree_root: 0x1e22
historic_nullifier_tree_root: 0x1f22
historic_contract_tree_root: 0x1d22
historic_l1_to_l2_messages_tree_root: 0x2022
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2122
version: 0x2222

is_execution_request: 0
 contract_address: 0x1013
function_data: function_selector: 1014
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1223 0x1224 0x1225 0x1226 ]
read_requests: [ 0x1323 0x1324 0x1325 0x1326 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
encrypted_logs_hash: [ 0x1923 0x1924 ]
unencrypted_logs_hash: [ 0x1a23 0x1a24 ]
encrypted_log_preimages_length: 0x1b23
unencrypted_log_preimages_length: 0x1c23
historic_private_data_tree_root: 0x1e23
historic_nullifier_tree_root: 0x1f23
historic_contract_tree_root: 0x1d23
historic_l1_to_l2_messages_tree_root: 0x2023
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2123
version: 0x2223

is_execution_request: 0
 contract_address: 0x1014
function_data: function_selector: 1015
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1224 0x1225 0x1226 0x1227 ]
read_requests: [ 0x1324 0x1325 0x1326 0x1327 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
encrypted_logs_hash: [ 0x1924 0x1925 ]
unencrypted_logs_hash: [ 0x1a24 0x1a25 ]
encrypted_log_preimages_length: 0x1b24
unencrypted_log_preimages_length: 0x1c24
historic_private_data_tree_root: 0x1e24
historic_nullifier_tree_root: 0x1f24
historic_contract_tree_root: 0x1d24
historic_l1_to_l2_messages_tree_root: 0x2024
contract_deployment_data: deployer_public_key: x: coordinate: [ 0x1 0x0 ]

y: coordinate: [ 0x2 0x0 ]


constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2124
version: 0x2224

is_execution_request: 0
 ]
proof:
[ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk:
key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness:
leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness:
leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 ]

read_request_membership_witnesses:
[ leaf_index: 0x1071
sibling_path: [ 0x1071 0x1072 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 ]
 leaf_index: 0x1072
sibling_path: [ 0x1072 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 ]
 leaf_index: 0x1073
sibling_path: [ 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 ]
 leaf_index: 0x1074
sibling_path: [ 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 ]
 ]
portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_public_inputs 1`] = `
"end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0xc01
old_value: 0xc02
new_value: 0xc03
 leaf_index: 0xc02
old_value: 0xc03
new_value: 0xc04
 leaf_index: 0xc03
old_value: 0xc04
new_value: 0xc05
 leaf_index: 0xc04
old_value: 0xc05
new_value: 0xc06
 ]
public_data_reads:
[ leaf_index: 0xd01
value: 0xd02
 leaf_index: 0xd02
value: 0xd03
 leaf_index: 0xd03
value: 0xd04
 leaf_index: 0xd04
value: 0xd05
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
deployer_public_key: x: coordinate: [ 0x105 0x0 ]

y: coordinate: [ 0x106 0x0 ]


constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1
"
`;

exports[`structs/kernel serializes and prints public_kernel_inputs 1`] = `
"previous_kernel:
public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0xc01
old_value: 0xc02
new_value: 0xc03
 leaf_index: 0xc02
old_value: 0xc03
new_value: 0xc04
 leaf_index: 0xc03
old_value: 0xc04
new_value: 0xc05
 leaf_index: 0xc04
old_value: 0xc05
new_value: 0xc06
 ]
public_data_reads:
[ leaf_index: 0xd01
value: 0xd02
 leaf_index: 0xd02
value: 0xd03
 leaf_index: 0xd03
value: 0xd04
 leaf_index: 0xd04
value: 0xd05
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
deployer_public_key: x: coordinate: [ 0x105 0x0 ]

y: coordinate: [ 0x106 0x0 ]


constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

public_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1011
storage_contract_address: 0x1001
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1411
old_value: 0x1412
new_value: 0x1413
 storage_slot: 0x1412
old_value: 0x1413
new_value: 0x1414
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1511
current_value: 0x1512
 storage_slot: 0x1512
current_value: 0x1513
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1b9c88fa030a87c80a946ed13b4a64ccc1cbf5fafed9076e41944cf1f0690087 0x2a01699ed7f32fc263335ce0286466e82026e260063f9a4c560143b5bada7607 0x2be1915b89c286d64adc5c92fc32ed421e9cc39c29178d6f140e209e8856c4db 0x28a95424fd7498551efb8db34b3c53c66a0ed20191df29a4c0c11d8eba6cae50 ]
new_commitments: [ 0x1711 0x1712 0x0 0x0 ]
new_nullifiers: [ 0x1811 0x1812 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1911 0x0 ]
unencrypted_logs_hash: [ 0x1912 0x0 ]
unencrypted_log_preimages_length: 0x1913
historic_public_data_tree_root: 0x1a11
prover_address: 0x1b12

is_execution_request: 0

public_call_stack_preimages:
[ contract_address: 0x1301
function_data: function_selector: 1302
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1301
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1411
return_values: [ 0x1511 0x1512 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1711
old_value: 0x1712
new_value: 0x1713
 storage_slot: 0x1712
old_value: 0x1713
new_value: 0x1714
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1811
current_value: 0x1812
 storage_slot: 0x1812
current_value: 0x1813
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1911 0x1912 0x0 0x0 ]
new_commitments: [ 0x1a11 0x1a12 0x0 0x0 ]
new_nullifiers: [ 0x1b11 0x1b12 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c11 0x0 ]
unencrypted_logs_hash: [ 0x1c12 0x0 ]
unencrypted_log_preimages_length: 0x1c13
historic_public_data_tree_root: 0x1d11
prover_address: 0x1e12

is_execution_request: 0
 contract_address: 0x1302
function_data: function_selector: 1303
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1302
portal_contract_address: 0x1414141414141414141414141414141414141414
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1412
return_values: [ 0x1512 0x1513 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1712
old_value: 0x1713
new_value: 0x1714
 storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1812
current_value: 0x1813
 storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1912 0x1913 0x0 0x0 ]
new_commitments: [ 0x1a12 0x1a13 0x0 0x0 ]
new_nullifiers: [ 0x1b12 0x1b13 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c12 0x0 ]
unencrypted_logs_hash: [ 0x1c13 0x0 ]
unencrypted_log_preimages_length: 0x1c14
historic_public_data_tree_root: 0x1d12
prover_address: 0x1e13

is_execution_request: 0
 contract_address: 0x1303
function_data: function_selector: 1304
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1303
portal_contract_address: 0x1515151515151515151515151515151515151515
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1413
return_values: [ 0x1513 0x1514 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1913 0x1914 0x0 0x0 ]
new_commitments: [ 0x1a13 0x1a14 0x0 0x0 ]
new_nullifiers: [ 0x1b13 0x1b14 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c13 0x0 ]
unencrypted_logs_hash: [ 0x1c14 0x0 ]
unencrypted_log_preimages_length: 0x1c15
historic_public_data_tree_root: 0x1d13
prover_address: 0x1e14

is_execution_request: 0
 contract_address: 0x1304
function_data: function_selector: 1305
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1304
portal_contract_address: 0x1616161616161616161616161616161616161616
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1414
return_values: [ 0x1514 0x1515 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1914 0x1915 0x0 0x0 ]
new_commitments: [ 0x1a14 0x1a15 0x0 0x0 ]
new_nullifiers: [ 0x1b14 0x1b15 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c14 0x0 ]
unencrypted_logs_hash: [ 0x1c15 0x0 ]
unencrypted_log_preimages_length: 0x1c16
historic_public_data_tree_root: 0x1d14
prover_address: 0x1e15

is_execution_request: 0
 ]
proof:
[ 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 ]
portal_contract_address: 0x1002
bytecode_hash: 0x1003

"
`;
